--- a/package.json
+++ b/package.json
@@ -44,6 +44,7 @@
   ],
   "dependencies": {
     "@fortawesome/fontawesome-free": "5.12.1",
+    "axios": "^0.19.2",
     "chart.js": "2.9.3",
     "classnames": "2.2.6",
     "joi-browser": "^13.4.0",
@@ -58,6 +59,7 @@
     "react-google-maps": "9.4.5",
     "react-router-dom": "5.1.2",
     "react-scripts": "^3.4.1",
+    "react-toastify": "^5.5.0",
     "reactstrap": "8.4.1"
   },
   "devDependencies": {
