--- a/package.json
+++ b/package.json
@@ -49,8 +49,9 @@
     "classnames": "2.2.6",
     "joi-browser": "^13.4.0",
     "jwt-decode": "^2.2.0",
+    "light-toast": "^0.2.3",
     "moment": "2.24.0",
-    "node-sass": "4.13.1",
+    "node-sass": "^4.14.1",
     "nouislider": "14.1.1",
     "react": "16.12.0",
     "react-chartjs-2": "2.9.0",
