--- a/.env.development
+++ b/.env.development
@@ -1,2 +1,4 @@
 REACT_APP_BASENAME=
-REACT_APP_API_URL=https://cors-anywhere.herokuapp.com/http://smarnovativelabs.com/ISPManager/api
+#REACT_APP_API_URL=https://cors-anywhere.herokuapp.com/http://smarnovativelabs.com/ISPManager/api
+REACT_APP_API_URL=http://smarnovativelabs.com/ISPManager/api
+#PUBLIC_URL=http://ispmanager.epizy.com/
