--- a/package.json
+++ b/package.json
@@ -1,6 +1,7 @@
 {
   "name": "argon-dashboard-react",
   "version": "1.1.0",
+  "homepage": "http://ispmanager.epizy.com/",
   "description": "React version of Argon Dashboard by Creative Tim",
   "main": "index.js",
   "repository": {
@@ -22,7 +23,6 @@
   "bugs": {
     "url": "https://github.com/creativetimofficial/argon-dashboard-react/issues"
   },
-  "homepage": "https://demos.creative-tim.com/argon-dashboard-react/",
   "scripts": {
     "start": "react-scripts start",
     "build": "react-scripts build",
