--- a/package.json
+++ b/package.json
@@ -1,7 +1,7 @@
 {
   "name": "argon-dashboard-react",
   "version": "1.1.0",
-  "homepage": "http://ispmanager.epizy.com/",
+  "homepage": "",
   "description": "React version of Argon Dashboard by Creative Tim",
   "main": "index.js",
   "repository": {
