--- a/.env.production
+++ b/.env.production
@@ -1,4 +1,2 @@
 REACT_APP_BASENAME=
-#REACT_APP_API_URL=https://cors-anywhere.herokuapp.com/http://smarnovativelabs.com/ISPManager/api
-REACT_APP_API_URL=http://smarnovativelabs.com/ISPManager/api
-PUBLIC_URL=http://ispmanager.epizy.com/
+REACT_APP_API_URL=https://cors-anywhere.herokuapp.com/http://smarnovativelabs.com/ISPManager/api
