--- a/package.json
+++ b/package.json
@@ -1,13 +1,13 @@
 {
-  "name": "argon-dashboard-react",
+  "name": "ispmanager",
   "version": "1.1.0",
-  "description": "React version of Argon Dashboard by Creative Tim",
+  "homepage": "http://isp.smarnovativelabs.com",
+  "description": "React version of ISPMANAGER",
   "main": "index.js",
   "repository": {
     "type": "git",
     "url": "git+https://github.com/creativetimofficial/argon-dashboard-react.git"
   },
-  "homepage": "http://ispmanager.unaux.com",
   "keywords": [
     "react",
     "reactjs",
@@ -47,7 +47,6 @@
     "axios": "^0.19.2",
     "chart.js": "2.9.3",
     "classnames": "2.2.6",
-    "firebase-tools": "^8.4.3",
     "joi-browser": "^13.4.0",
     "jwt-decode": "^2.2.0",
     "light-toast": "^0.2.3",
@@ -59,10 +58,10 @@
     "react-copy-to-clipboard": "5.0.2",
     "react-datetime": "2.16.3",
     "react-dom": "16.12.0",
-    "react-google-maps": "9.4.5",
     "react-router-dom": "5.1.2",
     "react-scripts": "^3.4.1",
-    "reactstrap": "8.4.1"
+    "reactstrap": "8.4.1",
+    "tools": "0.0.0"
   },
   "devDependencies": {
     "@types/googlemaps": "3.39.2",
